--- a/PirateTools.TravelExpense.WebApp/Layout/MainLayout.razor
+++ b/PirateTools.TravelExpense.WebApp/Layout/MainLayout.razor
@@ -1,5 +1,5 @@
 ﻿@inherits LayoutComponentBase
 
-<div class="container" style="height: 100%;">
+<div class="container pt-4 pb-4">
     @Body
 </div>
