--- a/PirateTools.TravelExpense.WebApp/Pages/Wizard/StepBankInformationEntry.razor
+++ b/PirateTools.TravelExpense.WebApp/Pages/Wizard/StepBankInformationEntry.razor
@@ -1,26 +1,31 @@
 ﻿@page "/StepBankInformationEntry"
+@layout VerticalCenterLayout
+@inherits WizardComponentBase
 
 @if (AppData.CurrentReport == null || AppData.CurrentReport.Pirate == null) {
     return;
 }
 
-<div class="row" style="height: 100%; align-items: center;">
+<h1>Bankdaten</h1>
+
+<div class="mb-3">
+    <label class="form-label">IBAN</label>
+    <input class="form-control" @bind=AppData.CurrentReport.Pirate.IBAN />
+</div>
+
+<div class="mb-3">
+    <label class="form-label">BIC</label>
+    <input class="form-control" @bind=AppData.CurrentReport.Pirate.BIC />
+</div>
+
+<div class="d-flex justify-content-between">
+    <div style="flex: 1;">
+        <NavLink href="/StepDonationSelection" class="btn btn-primary">Zurück</NavLink>
+    </div>
     <div>
-        <h1>Bankdaten</h1>
-
-        <div class="mb-3">
-            <label class="form-label">IBAN</label>
-            <input class="form-control" @bind=AppData.CurrentReport.Pirate.IBAN />
-        </div>
-
-        <div class="mb-3">
-            <label class="form-label">BIC</label>
-            <input class="form-control" @bind=AppData.CurrentReport.Pirate.BIC />
-        </div>
-
-        <div class="d-flex justify-content-between">
-            <NavLink href="/StepDonationSelection" class="btn btn-primary">Zurück</NavLink>
-            <NavLink href="/StepSummary" class="btn btn-primary">Weiter</NavLink>
-        </div>
+        <NavLink href="/Overview" class="btn btn-primary">Übersicht</NavLink>
+    </div>
+    <div style="flex: 1;" class="d-flex justify-content-end">
+        <NavLink href="/StepSummary" class="btn btn-primary">Weiter</NavLink>
     </div>
 </div>
