--- a/PirateTools.TravelExpense.WebApp/Pages/Wizard/StepDonationSelection.razor
+++ b/PirateTools.TravelExpense.WebApp/Pages/Wizard/StepDonationSelection.razor
@@ -1,150 +1,155 @@
 ﻿@page "/StepDonationSelection"
 @using PirateTools.Models
+@layout VerticalCenterLayout
+@inherits WizardComponentBase
 
 @if (AppData.CurrentReport == null || AppData.CurrentReport.Pirate == null) {
     return;
 }
 
-<div class="row" style="height: 100%; align-items: center;">
+<h1 class="mb-4">Spenden</h1>
+<p>
+    Wähle aus ob du alles, einen spezifischen Anteil oder teile der Kosten spenden möchtest.<br />
+    Jede Spende hilft der Partei mehr Anteile der Parteienfinanzierung zu bekommen!
+</p>
+
+<div class="mb-3">
+    <label class="form-label">Insgesamt angefallene Kosten</label>
+    <div class="input-group">
+        <input class="form-control" value="@AppData.CurrentReport.TotalCosts.ToString("N2", Culture)" disabled />
+
+        <span class="input-group-text">€</span>
+        <div class="input-group-text" style="width: 25%;">
+            <input class="form-check-input" type="checkbox" @bind=AppData.CurrentReport.DonateAll />
+            <label class="ms-2">Spenden</label>
+        </div>
+    </div>
+</div>
+
+<div class="mb-3">
+    <label class="form-label">Genau diesen Anteil spenden</label>
+    <div class="input-group">
+        <input class="form-control" type="number" min="0" max="@AppData.CurrentReport.TotalCosts"
+                @bind=AppData.CurrentReport.DonateAmountCustom />
+
+        <span class="input-group-text">€</span>
+        <div class="input-group-text" style="width: 25%;">
+            <input class="form-check-input" type="checkbox" @bind=AppData.CurrentReport.DonateCustomAmount
+                    disabled="@IsDonateSpecificDisabled()" />
+            <label class="ms-2">Spenden</label>
+        </div>
+    </div>
+</div>
+
+<h3>Kostenanteile</h3>
+
+@if (AppData.CurrentReport.VehicleUsed.IsPrivateVehicle()) {
+    <div class="mb-3">
+        <label class="form-label">Kosten durch die Nutzung eines privaten Fahrzeuges</label>
+        <div class="input-group">
+            <input class="form-control" value="@AppData.CurrentReport.DrivenCompensation.ToString("N2", Culture)" disabled />
+
+            <span class="input-group-text">€</span>
+            <div class="input-group-text" style="width: 25%;">
+                <input class="form-check-input" type="checkbox" @bind=AppData.CurrentReport.DonateKmFlatRate
+                        disabled="@IsDonatePartialDisabled()" />
+                <label class="ms-2">Spenden</label>
+            </div>
+        </div>
+    </div>
+} else if (AppData.CurrentReport.VehicleUsed == Vehicle.PublicTransit) {
+    <div class="mb-3">
+        <label class="form-label">Kosten durch die Nutzung eines privaten Fahrzeuges</label>
+        <div class="input-group">
+            <input class="form-control" value="@AppData.CurrentReport.PublicTransitCosts.ToString("N2", Culture)" disabled />
+
+            <span class="input-group-text">€</span>
+            <div class="input-group-text" style="width: 25%;">
+                <input class="form-check-input" type="checkbox" @bind=AppData.CurrentReport.DonatePublicTransitCosts
+                        disabled="@IsDonatePartialDisabled()" />
+                <label class="ms-2">Spenden</label>
+            </div>
+        </div>
+    </div>
+}
+
+@if (AppData.CurrentReport.NumberShortDays > 0) {
+    <div class="mb-3">
+        <label class="form-label">Verpflegungspauschale für An/Abreisetage (Oder Tagesreisen >= 8h)</label>
+        <div class="input-group">
+            <input class="form-control" value="@AppData.CurrentReport.ShortDaysCompensation.ToString("N2", Culture)" disabled />
+
+            <span class="input-group-text">€</span>
+            <div class="input-group-text" style="width: 25%;">
+                <input class="form-check-input" type="checkbox" @bind=AppData.CurrentReport.DonateFoodFlatRateShortDays
+                        disabled="@IsDonatePartialDisabled()" />
+                <label class="ms-2">Spenden</label>
+            </div>
+        </div>
+    </div>
+}
+
+@if (AppData.CurrentReport.NumberFullDays > 0) {
+    <div class="mb-3">
+        <label class="form-label">Verpflegungspauschale für volle Tage</label>
+        <div class="input-group">
+            <input class="form-control" value="@AppData.CurrentReport.FullDaysCompensation.ToString("N2", Culture)" disabled />
+
+            <span class="input-group-text">€</span>
+            <div class="input-group-text" style="width: 25%;">
+                <input class="form-check-input" type="checkbox" @bind=AppData.CurrentReport.DonateFoodFlatRateFullDays
+                        disabled="@IsDonatePartialDisabled()" />
+                <label class="ms-2">Spenden</label>
+            </div>
+        </div>
+    </div>
+}
+
+@if (AppData.CurrentReport.AccommodationType != AccommodationType.None) {
+    <div class="mb-3">
+        <label class="form-label">Übernachtungskosten</label>
+        <div class="input-group">
+            <input class="form-control" value="@AppData.CurrentReport.CalculatedAccommodationCosts.ToString("N2", Culture)" disabled />
+
+            <span class="input-group-text">€</span>
+            <div class="input-group-text" style="width: 25%;">
+                <input class="form-check-input" type="checkbox" @bind=AppData.CurrentReport.DonateAccommodationCosts
+                        disabled="@IsDonatePartialDisabled()" />
+                <label class="ms-2">Spenden</label>
+            </div>
+        </div>
+    </div>
+}
+
+@if (AppData.CurrentReport.OtherCosts.Count > 0) {
+    <h3>Sonstige Kosten</h3>
+
+    for (int i = 0; i < AppData.CurrentReport.OtherCosts.Count; i++) {
+        var entry = AppData.CurrentReport.OtherCosts[i];
+        var j = i;
+
+        <div class="mb-3">
+            <div class="input-group">
+                <input class="form-control" value="@($"{entry.Text} ({entry.Cost.ToString("C2", Culture)})")" disabled />
+
+                <div class="input-group-text" style="width: 25%;">
+                    <input class="form-check-input" type="checkbox" @bind=AppData.CurrentReport.OtherCosts[j].Donate
+                            disabled="@IsDonatePartialDisabled()" />
+                    <label class="ms-2">Spenden</label>
+                </div>
+            </div>
+        </div>
+    }
+}
+
+<div class="d-flex justify-content-between">
+    <div style="flex: 1;">
+        <NavLink @onclick=GoBack class="btn btn-primary">Zurück</NavLink>
+    </div>
     <div>
-        <h1 class="mb-4">Spenden</h1>
-        <p>
-            Wähle aus ob du alles, einen spezifischen Anteil oder teile der Kosten spenden möchtest.<br />
-            Jede Spende hilft der Partei mehr Anteile der Parteienfinanzierung zu bekommen!
-        </p>
-
-        <div class="mb-3">
-            <label class="form-label">Insgesamt angefallene Kosten</label>
-            <div class="input-group">
-                <input class="form-control" value="@AppData.CurrentReport.TotalCosts.ToString("N2", Culture)" disabled />
-
-                <span class="input-group-text">€</span>
-                <div class="input-group-text" style="width: 25%;">
-                    <input class="form-check-input" type="checkbox" @bind=AppData.CurrentReport.DonateAll />
-                    <label class="ms-2">Spenden</label>
-                </div>
-            </div>
-        </div>
-
-        <div class="mb-3">
-            <label class="form-label">Genau diesen Anteil spenden</label>
-            <div class="input-group">
-                <input class="form-control" type="number" min="0" max="@AppData.CurrentReport.TotalCosts"
-                       @bind=AppData.CurrentReport.DonateAmountCustom />
-
-                <span class="input-group-text">€</span>
-                <div class="input-group-text" style="width: 25%;">
-                    <input class="form-check-input" type="checkbox" @bind=AppData.CurrentReport.DonateCustomAmount
-                           disabled="@IsDonateSpecificDisabled()" />
-                    <label class="ms-2">Spenden</label>
-                </div>
-            </div>
-        </div>
-
-        <h3>Kostenanteile</h3>
-
-        @if (AppData.CurrentReport.VehicleUsed.IsPrivateVehicle()) {
-            <div class="mb-3">
-                <label class="form-label">Kosten durch die Nutzung eines privaten Fahrzeuges</label>
-                <div class="input-group">
-                    <input class="form-control" value="@AppData.CurrentReport.DrivenCompensation.ToString("N2", Culture)" disabled />
-
-                    <span class="input-group-text">€</span>
-                    <div class="input-group-text" style="width: 25%;">
-                        <input class="form-check-input" type="checkbox" @bind=AppData.CurrentReport.DonateKmFlatRate
-                               disabled="@IsDonatePartialDisabled()" />
-                        <label class="ms-2">Spenden</label>
-                    </div>
-                </div>
-            </div>
-        } else if (AppData.CurrentReport.VehicleUsed == Vehicle.PublicTransit) {
-            <div class="mb-3">
-                <label class="form-label">Kosten durch die Nutzung eines privaten Fahrzeuges</label>
-                <div class="input-group">
-                    <input class="form-control" value="@AppData.CurrentReport.PublicTransitCosts.ToString("N2", Culture)" disabled />
-
-                    <span class="input-group-text">€</span>
-                    <div class="input-group-text" style="width: 25%;">
-                        <input class="form-check-input" type="checkbox" @bind=AppData.CurrentReport.DonatePublicTransitCosts
-                               disabled="@IsDonatePartialDisabled()" />
-                        <label class="ms-2">Spenden</label>
-                    </div>
-                </div>
-            </div>
-        }
-
-        @if (AppData.CurrentReport.NumberShortDays > 0) {
-            <div class="mb-3">
-                <label class="form-label">Verpflegungspauschale für An/Abreisetage (Oder Tagesreisen >= 8h)</label>
-                <div class="input-group">
-                    <input class="form-control" value="@AppData.CurrentReport.ShortDaysCompensation.ToString("N2", Culture)" disabled />
-
-                    <span class="input-group-text">€</span>
-                    <div class="input-group-text" style="width: 25%;">
-                        <input class="form-check-input" type="checkbox" @bind=AppData.CurrentReport.DonateFoodFlatRateShortDays
-                               disabled="@IsDonatePartialDisabled()" />
-                        <label class="ms-2">Spenden</label>
-                    </div>
-                </div>
-            </div>
-        }
-
-        @if (AppData.CurrentReport.NumberFullDays > 0) {
-            <div class="mb-3">
-                <label class="form-label">Verpflegungspauschale für volle Tage</label>
-                <div class="input-group">
-                    <input class="form-control" value="@AppData.CurrentReport.FullDaysCompensation.ToString("N2", Culture)" disabled />
-
-                    <span class="input-group-text">€</span>
-                    <div class="input-group-text" style="width: 25%;">
-                        <input class="form-check-input" type="checkbox" @bind=AppData.CurrentReport.DonateFoodFlatRateFullDays
-                               disabled="@IsDonatePartialDisabled()" />
-                        <label class="ms-2">Spenden</label>
-                    </div>
-                </div>
-            </div>
-        }
-
-        @if (AppData.CurrentReport.AccommodationType != AccommodationType.None) {
-            <div class="mb-3">
-                <label class="form-label">Übernachtungskosten</label>
-                <div class="input-group">
-                    <input class="form-control" value="@AppData.CurrentReport.CalculatedAccommodationCosts.ToString("N2", Culture)" disabled />
-
-                    <span class="input-group-text">€</span>
-                    <div class="input-group-text" style="width: 25%;">
-                        <input class="form-check-input" type="checkbox" @bind=AppData.CurrentReport.DonateAccommodationCosts
-                               disabled="@IsDonatePartialDisabled()" />
-                        <label class="ms-2">Spenden</label>
-                    </div>
-                </div>
-            </div>
-        }
-
-        @if (AppData.CurrentReport.OtherCosts.Count > 0) {
-            <h3>Sonstige Kosten</h3>
-
-            for (int i = 0; i < AppData.CurrentReport.OtherCosts.Count; i++) {
-                var entry = AppData.CurrentReport.OtherCosts[i];
-                var j = i;
-
-                <div class="mb-3">
-                    <div class="input-group">
-                        <input class="form-control" value="@($"{entry.Text} ({entry.Cost.ToString("C2", Culture)})")" disabled />
-
-                        <div class="input-group-text" style="width: 25%;">
-                            <input class="form-check-input" type="checkbox" @bind=AppData.CurrentReport.OtherCosts[j].Donate
-                                   disabled="@IsDonatePartialDisabled()" />
-                            <label class="ms-2">Spenden</label>
-                        </div>
-                    </div>
-                </div>
-            }
-        }
-
-        <div class="d-flex justify-content-between">
-            <NavLink @onclick=GoBack class="btn btn-primary">Zurück</NavLink>
-            <NavLink @onclick=GoNext class="btn btn-primary">Weiter</NavLink>
-        </div>
+        <NavLink href="/Overview" class="btn btn-primary">Übersicht</NavLink>
+    </div>
+    <div style="flex: 1;" class="d-flex justify-content-end">
+        <NavLink @onclick=GoNext class="btn btn-primary">Weiter</NavLink>
     </div>
 </div>
