--- a/PirateTools.TravelExpense.WebApp/Pages/Wizard/StepNightlyCostExact.razor
+++ b/PirateTools.TravelExpense.WebApp/Pages/Wizard/StepNightlyCostExact.razor
@@ -1,28 +1,33 @@
 ﻿@page "/StepNightlyCostExact"
+@layout VerticalCenterLayout
+@inherits WizardComponentBase
 
 @if (AppData.CurrentReport == null || AppData.CurrentReport.Pirate == null) {
     return;
 }
 
-<div class="row" style="height: 100%; align-items: center;">
+<h1>Übernachtungskosten</h1>
+
+<div class="mb-3">
+    <label class="form-label">Übernachtungskosten</label>
+    <input class="form-control" type="number" min="0" @bind=AppData.CurrentReport.AccommodationCosts />
+</div>
+
+<div class="card mb-3 not-allowed">
+    <div class="card-body">
+        <h5 class="card-title">Bild des Belegs hochladen</h5>
+        <p class="card-text">Diese Funktion existiert noch nicht D:</p>
+    </div>
+</div>
+
+<div class="d-flex justify-content-between">
+    <div style="flex: 1;">
+        <NavLink href="StepNightlyCostTypeSelection" class="btn btn-primary">Zurück</NavLink>
+    </div>
     <div>
-        <h1>Übernachtungskosten</h1>
-
-        <div class="mb-3">
-            <label class="form-label">Übernachtungskosten</label>
-            <input class="form-control" type="number" min="0" @bind=AppData.CurrentReport.AccommodationCosts />
-        </div>
-
-        <div class="card mb-3 not-allowed">
-            <div class="card-body">
-                <h5 class="card-title">Bild des Belegs hochladen</h5>
-                <p class="card-text">Diese Funktion existiert noch nicht D:</p>
-            </div>
-        </div>
-
-        <div class="d-flex justify-content-between">
-            <NavLink href="StepNightlyCostTypeSelection" class="btn btn-primary">Zurück</NavLink>
-            <NavLink href="StepOtherCostsSelection" class="btn btn-primary">Weiter</NavLink>
-        </div>
+        <NavLink href="/Overview" class="btn btn-primary">Übersicht</NavLink>
+    </div>
+    <div style="flex: 1;" class="d-flex justify-content-end">
+        <NavLink href="StepOtherCostsSelection" class="btn btn-primary">Weiter</NavLink>
     </div>
 </div>
