--- a/PirateTools.TravelExpense.WebApp/Pages/Wizard/StepOtherCostsSelection.razor
+++ b/PirateTools.TravelExpense.WebApp/Pages/Wizard/StepOtherCostsSelection.razor
@@ -1,40 +1,45 @@
 ﻿@page "/StepOtherCostsSelection"
+@layout VerticalCenterLayout
+@inherits WizardComponentBase
 
 @if (AppData.CurrentReport == null || AppData.CurrentReport.Pirate == null) {
     return;
 }
 
-<div class="row" style="height: 100%; align-items: center;">
+<h1 class="mb-4">Hattest du sonstige Kosten?</h1>
+<p>
+    Du kannst z.B. Parkplatzkosten oder ähnliches einreichen.
+</p>
+
+<div class="row mb-3">
+    <div class="col">
+        <NavLink href="/StepOtherCostsOverview" class="no-decoration">
+            <div class="card box-highlight h-100">
+                <div class="card-body">
+                    <h5 class="card-title">Ja</h5>
+                </div>
+            </div>
+        </NavLink>
+    </div>
+
+    <div class="col">
+        <NavLink href="/StepDonationSelection" class="no-decoration">
+            <div class="card box-highlight h-100">
+                <div class="card-body">
+                    <h5 class="card-title">Nein</h5>
+                </div>
+            </div>
+        </NavLink>
+    </div>
+</div>
+
+<div class="d-flex justify-content-between">
+    <div style="flex: 1;">
+        <NavLink @onclick=GoBack class="btn btn-primary">Zurück</NavLink>
+    </div>
     <div>
-        <h1 class="mb-4">Hattest du sonstige Kosten?</h1>
-        <p>
-            Du kannst z.B. Parkplatzkosten oder ähnliches einreichen.
-        </p>
-
-        <div class="row mb-3">
-            <div class="col">
-                <NavLink href="/StepOtherCostsOverview" class="no-decoration">
-                    <div class="card box-highlight h-100">
-                        <div class="card-body">
-                            <h5 class="card-title">Ja</h5>
-                        </div>
-                    </div>
-                </NavLink>
-            </div>
-
-            <div class="col">
-                <NavLink href="/StepDonationSelection" class="no-decoration">
-                    <div class="card box-highlight h-100">
-                        <div class="card-body">
-                            <h5 class="card-title">Nein</h5>
-                        </div>
-                    </div>
-                </NavLink>
-            </div>
-        </div>
-
-        <div class="d-flex justify-content-between">
-            <NavLink @onclick=GoBack class="btn btn-primary">Zurück</NavLink>
-        </div>
+        <NavLink href="/Overview" class="btn btn-primary">Übersicht</NavLink>
+    </div>
+    <div style="flex: 1;" class="d-flex justify-content-end">
     </div>
 </div>
