--- a/PirateTools.TravelExpense.WebApp/Pages/Wizard/StepSummary.razor
+++ b/PirateTools.TravelExpense.WebApp/Pages/Wizard/StepSummary.razor
@@ -1,21 +1,27 @@
 ﻿@page "/StepSummary"
+@layout VerticalCenterLayout
+@inherits WizardComponentBase
 
 @if (AppData.CurrentReport == null || AppData.CurrentReport.Pirate == null) {
     return;
 }
 
-<div class="row" style="height: 100%; align-items: center;">
+<h1>Zusammenfassung</h1>
+
+<div class="mb-3">
+    <label class="form-label">Anzahl der Anlagen</label>
+    <input class="form-control" type="number" min="0" @bind=AppData.CurrentReport.AttachmentCount />
+</div>
+
+<div class="d-flex justify-content-between">
+    <div style="flex: 1;">
+        <NavLink @onclick=GoBack class="btn btn-primary">Zurück</NavLink>
+    </div>
     <div>
-        <h1>Zusammenfassung</h1>
-
-        <div class="mb-3">
-            <label class="form-label">Anzahl der Anlagen</label>
-            <input class="form-control" type="number" min="0" @bind=AppData.CurrentReport.AttachmentCount />
-        </div>
-
-        <div class="d-flex justify-content-between">
-            <NavLink @onclick=GoBack class="btn btn-primary">Zurück</NavLink>
-            <NavLink @onclick=BuildPDF class="btn btn-success">PDF Speichern</NavLink>
-        </div>
+        <NavLink href="/Overview" class="btn btn-primary">Übersicht</NavLink>
+    </div>
+    <div style="flex: 1;" class="d-flex justify-content-end">
+        <NavLink href="/" class="btn btn-primary me-1">Zur Hauptseite</NavLink>
+        <NavLink @onclick=BuildPDF class="btn btn-success">PDF Speichern</NavLink>
     </div>
 </div>
