--- a/PirateTools.TravelExpense.WebApp/Pages/Wizard/StepTravelCostsVehicle.razor
+++ b/PirateTools.TravelExpense.WebApp/Pages/Wizard/StepTravelCostsVehicle.razor
@@ -1,34 +1,39 @@
 ﻿@page "/StepTravelCostsVehicle/{VehicleUsedInt:int}"
 @using PirateTools.Models
+@layout VerticalCenterLayout
+@inherits WizardComponentBase
 
 @if (AppData.CurrentReport == null || AppData.CurrentReport.Pirate == null) {
     return;
 }
 
-<div class="row" style="height: 100%; align-items: center;">
+<h1>Fahrtkosten</h1>
+<p>
+    Für die Fahrt mit einem privaten @VehicleUsed.GetVehicleName() können Pauschal
+    @GetFactor().ToString("C2", Culture) pro km angerechnet werden.
+    Benutze hierfür deinen favorisierten Routenservice um die gefahrenen km zu finden.
+</p>
+
+<div class="mb-3">
+    <label class="form-label">Gefahrene Km</label>
+    <input class="form-control" type="number" min="0" @bind=AppData.CurrentReport.DrivenKm />
+</div>
+
+<div class="card mb-3 not-allowed">
+    <div class="card-body">
+        <h5 class="card-title">Bild der Strecke hochladen</h5>
+        <p class="card-text">Diese Funktion existiert noch nicht D:</p>
+    </div>
+</div>
+
+<div class="d-flex justify-content-between">
+    <div style="flex: 1;">
+        <NavLink href="StepTravelTypeSelection" class="btn btn-primary">Zurück</NavLink>
+    </div>
     <div>
-        <h1>Fahrtkosten</h1>
-        <p>
-            Für die Fahrt mit einem privaten @VehicleUsed.GetVehicleName() können Pauschal
-            @GetFactor().ToString("C2", Culture) pro km angerechnet werden.
-            Benutze hierfür deinen favorisierten Routenservice um die gefahrenen km zu finden.
-        </p>
-
-        <div class="mb-3">
-            <label class="form-label">Gefahrene Km</label>
-            <input class="form-control" type="number" min="0" @bind=AppData.CurrentReport.DrivenKm />
-        </div>
-
-        <div class="card mb-3 not-allowed">
-            <div class="card-body">
-                <h5 class="card-title">Bild der Strecke hochladen</h5>
-                <p class="card-text">Diese Funktion existiert noch nicht D:</p>
-            </div>
-        </div>
-
-        <div class="d-flex justify-content-between">
-            <NavLink href="StepTravelTypeSelection" class="btn btn-primary">Zurück</NavLink>
-            <NavLink href="StepNightlyCostTypeSelection" class="btn btn-primary">Weiter</NavLink>
-        </div>
+        <NavLink href="/Overview" class="btn btn-primary">Übersicht</NavLink>
+    </div>
+    <div style="flex: 1;" class="d-flex justify-content-end">
+        <NavLink href="StepNightlyCostTypeSelection" class="btn btn-primary">Weiter</NavLink>
     </div>
 </div>
