--- a/PirateTools.TravelExpense.WebApp/Pages/Wizard/WizardOverview.razor
+++ b/PirateTools.TravelExpense.WebApp/Pages/Wizard/WizardOverview.razor
@@ -30,6 +30,7 @@
             <div class="card box-highlight pointer">
                 <div class="card-body">
                     <h5 class="card-title">Existierenden Benutzer auswählen</h5>
+                    <p class="card-text">Aktuell gewählt: @AppData.CurrentReport.Pirate?.Name</p>
                 </div>
             </div>
         </NavLink>
@@ -40,6 +41,7 @@
             <div class="card box-highlight pointer">
                 <div class="card-body">
                     <h5 class="card-title">Benutzerdaten editieren</h5>
+                    <p class="card-text">Daten angegeben für: @AppData.CurrentReport.Pirate?.Name</p>
                 </div>
             </div>
         </NavLink>
@@ -51,6 +53,7 @@
         <div class="card box-highlight pointer">
             <div class="card-body">
                 <h5 class="card-title">Verbandsdaten</h5>
+                <p class="card-text">Gewählter Verband für den gereist wurde: @AppData.CurrentReport.Federation?.FullName()</p>
             </div>
         </div>
     </NavLink>
