--- a/PirateTools.TravelExpense.WebApp/Pages/Wizard/WizardOverview.razor
+++ b/PirateTools.TravelExpense.WebApp/Pages/Wizard/WizardOverview.razor
@@ -153,7 +153,7 @@
         <NavLink href="/StepOtherCostsOverview" class="no-decoration">
             <div class="card box-highlight pointer">
                 <div class="card-body">
-                    <h5 class="card-title">Sonstige Kosten</h5>
+                    <h5 class="card-title">Liste der Sonstige Kosten</h5>
                     <p class="card-text">
                         Liste der sonstigen Kosten.
                     </p>
