--- a/PirateTools.TravelExpense.WebApp/Pages/Wizard/StepNightlyCostExact.razor
+++ b/PirateTools.TravelExpense.WebApp/Pages/Wizard/StepNightlyCostExact.razor
@@ -13,10 +13,25 @@
     <input class="form-control" type="number" min="0" @bind=AppData.CurrentReport.AccommodationCosts />
 </div>
 
-<div class="card mb-3 not-allowed">
+<div class="card mb-3">
     <div class="card-body">
-        <h5 class="card-title">Bild des Belegs hochladen</h5>
-        <p class="card-text">Diese Funktion existiert noch nicht D:</p>
+        <h5 class="card-title mb-3">Bild des Belegs hochladen</h5>
+
+        @if (AppData.Config.UseLocalStorage) {
+            @if (SavingImage) {
+                <p class="card-text">Bild wird gespeichert ...</p>
+            } else if (AppData.CurrentReport.ImageAccommodationReceipt == null) {
+                <p class="card-text">Kein Bild ausgewählt</p>
+            } else {
+                <p class="card-text">Ausgewähltes Bild: @AppData.CurrentReport.ImageAccommodationReceipt</p>
+            }
+
+            <p class="card-text mb-1">Neues Bild auswählen (Maximal 4 Mb)</p>
+            <InputFile OnChange=OnFileChanged />
+        } else {
+            <p class="card-text">Um dieses feature nutzen zu können, erlaube bitte die Speicherung von Daten in deinem Browser.</p>
+            <button @onclick=AllowLocalStorage class="btn btn-primary">Erlauben</button>
+        }
     </div>
 </div>
 
