--- a/PirateTools.TravelExpense.WebApp/wwwroot/css/app.css
+++ b/PirateTools.TravelExpense.WebApp/wwwroot/css/app.css
@@ -45,6 +45,7 @@ a.no-decoration {
     position: fixed;
     width: 100%;
     z-index: 1000;
+    color: black;
 }
 
     #blazor-error-ui .dismiss {
