Completely rework the way images are added to reports

--- a/PirateTools.TravelExpense.WebApp/Pages/Wizard/StepOtherCostsOverview.razor
+++ b/PirateTools.TravelExpense.WebApp/Pages/Wizard/StepOtherCostsOverview.razor
@@ -16,7 +16,7 @@
     var j = i;
 
     <div class="card mb-3 px-2 pt-1">
-        <div class="row mb-1">
+        <div class="row mb-2">
             <div class="col-8">
                 <label class="form-label">Beschreibung</label>
                 <input class="form-control" @bind=entry.Text />
@@ -30,32 +30,9 @@
             </div>
         </div>
 
-        <div class="row mb-3">
-            <div class="col-5">
-                <p class="mb-0">Bild des Beleg hochladen</p>
-
-                @if (AppData.Config.UseLocalStorage) {
-                    if (SavingImage) {
-                        <p>Bild wird gespeichert ...</p>
-                    } else if (entry.ImageReceipt == null) {
-                        <p>Kein Bild ausgewählt</p>
-                    } else {
-                        <p>Ausgewähltes Bild: @entry.ImageReceipt</p>
-                    }
-                }
-            </div>
-
-            @if (AppData.Config.UseLocalStorage) {
-                <div class="col-7">
-                    <p class="mb-1">Neues Bild auswählen (Maximal 4 Mb)</p>
-                    <InputFile OnChange=@(e => OnFileChanged(entry, e)) />
-                </div>
-            } else {
-                <div class="col-7">
-                    <p>Um dieses feature nutzen zu können, erlaube bitte die Speicherung von Daten in deinem Browser.</p>
-                    <button @onclick=AllowLocalStorage class="btn btn-primary">Erlauben</button>
-                </div>
-            }
+        <div class="mb-2">
+            <FileUploadComponent ImageRef="entry.ImageReceipt"
+                                 Title="Bild des Belegs hinzufügen" />
         </div>
     </div>
 }
