--- a/PirateTools.TravelExpense.WebApp/_Imports.razor
+++ b/PirateTools.TravelExpense.WebApp/_Imports.razor
@@ -8,3 +8,4 @@
 @using Microsoft.JSInterop
 @using PirateTools.TravelExpense.WebApp
 @using PirateTools.TravelExpense.WebApp.Layout
+@using PirateTools.TravelExpense.WebApp.Components
