--- a/PirateTools.TravelExpense.WebApp/Components/BootstrapModal.razor
+++ b/PirateTools.TravelExpense.WebApp/Components/BootstrapModal.razor
@@ -1,6 +1,6 @@
 ﻿<div class="modal show d-flex flex-column justify-content-center" tabindex="-1"
-     style="background-color: rgba(0, 0, 0, 0.3);">
-    <div class="modal-dialog" style="min-width: 33%;">
+     style="background-color: rgba(0, 0, 0, 0.5);">
+    <div class="modal-dialog" style="min-width: @MinWidth%; max-height: 80%">
         <div class="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title">@Title</h5>
