--- a/PirateTools.TravelExpense.WebApp/Pages/Wizard/StepTravelCostsVehicle.razor
+++ b/PirateTools.TravelExpense.WebApp/Pages/Wizard/StepTravelCostsVehicle.razor
@@ -15,29 +15,25 @@
 </p>
 
 <div class="mb-3">
-    <label class="form-label">Gefahrene Km</label>
+    <label class="form-label">Gesamte gefahrene Strecke in Km</label>
     <input class="form-control" type="number" min="0" @bind=AppData.CurrentReport.DrivenKm />
 </div>
 
-<div class="card mb-3">
-    <div class="card-body">
-        <h5 class="card-title mb-3">Bild der Strecke hochladen</h5>
+<div class="mb-3 row row-cols-2">
+    @foreach (var imgRef in AppData.CurrentReport.ImageMapRoute) {
+        <div class="col h-100 mb-3">
+            <FileUploadComponent ImageRef="imgRef"
+                                 Title="Bild der Strecke hinzufügen"
+                                 OnRemoveChoiceClicked=OnRemoveClicked />
+        </div>
+    }
 
-        @if (AppData.Config.UseLocalStorage) {
-            @if (SavingImage) {
-                <p class="card-text">Bild wird gespeichert ...</p>
-            } else if (AppData.CurrentReport.ImageMapRoute == null) {
-                <p class="card-text">Kein Bild ausgewählt</p>
-            } else {
-                <p class="card-text">Ausgewähltes Bild: @AppData.CurrentReport.ImageMapRoute</p>
-            }
-
-            <p class="card-text mb-1">Neues Bild auswählen (Maximal 4 Mb)</p>
-            <InputFile OnChange=OnFileChanged />
-        } else {
-            <p class="card-text">Um dieses feature nutzen zu können, erlaube bitte die Speicherung von Daten in deinem Browser.</p>
-            <button @onclick=AllowLocalStorage class="btn btn-primary">Erlauben</button>
-        }
+    <div class="col mb-3">
+        <div class="card h-100 pointer box-highlight" @onclick=AddEntry>
+            <div class="card-body d-flex justify-content-center">
+                <span class="align-self-center" style="font-size: 2em;">+</span>
+            </div>
+        </div>
     </div>
 </div>
 
