--- a/PirateTools.TravelExpense.WebApp/Pages/Home.razor
+++ b/PirateTools.TravelExpense.WebApp/Pages/Home.razor
@@ -19,8 +19,8 @@
     </div>
 
     <div class="col">
-        <NavLink href="/Users/List" class="no-decoration">
-            <div class="card @(AppData.Config.UseLocalStorage ? "box-highlight" : "not-allowed") h-100">
+        <NavLink @onclick=UserManagement class="no-decoration">
+            <div class="card @(AppData.Config.UseLocalStorage ? "box-highlight pointer" : "not-allowed") h-100">
                 <div class="card-body">
                     <h5 class="card-title">Benutzerverwaltung</h5>
                     <p class="card-text">Benutzer Anlegen oder Editieren</p>
